Updated AnalyticsService.java
Fixed minor issues